Rework networking and simplify it matching vanilla's shape more.