@@ -3,8 +3,6 @@ package net.conczin.mca.client.render.layer;
 import net.conczin.mca.MCA;
 import net.conczin.mca.client.render.VillagerVisuals;
 import net.conczin.mca.client.resources.ColorPalette;
-import net.conczin.mca.resources.BodySkinList;
-import net.conczin.mca.resources.data.skin.BodySkin;
 import net.minecraft.client.model.HumanoidModel;
 import net.minecraft.client.renderer.entity.RenderLayerParent;
 import net.minecraft.client.renderer.entity.state.HumanoidRenderState;
@@ -25,7 +23,7 @@ public class SkinLayer<S extends HumanoidRenderState, M extends HumanoidModel<S>
             return cached(visuals.skin(), Identifier::parse);
         }
 
-        int skin = (int) Math.min(4, Math.max(0, visuals.skinGene() * 5));
+        int skin = (int) Math.clamp(visuals.skinGene() * 5, 0, 4);
         return cached("skins/skin/" + visuals.genderDataName() + "/" + skin + ".png", MCA::locate);
     }
 
@@ -35,14 +33,6 @@ public class SkinLayer<S extends HumanoidRenderState, M extends HumanoidModel<S>
     }
 
     public int getColor(VillagerVisuals visuals, float tickDelta) {
-        if (!MCA.isBlankString(visuals.skin())) {
-            BodySkinList list = BodySkinList.getInstance();
-            BodySkin skin = list == null ? null : list.get(visuals.skin());
-            if (skin == null ? !BodySkin.isBuiltInTinted(visuals.skin()) : !skin.isTinted()) {
-                return 0xFFFFFFFF;
-            }
-        }
-
         int skinDye = visuals.skinDye();
         if (skinDye != 0xFF000000) {
             return skinDye;
